# c-retro-http-server

./: .gitignore  CMakeLists.txt  Readme.md  clearPort.txt  dbSetupInstruction.txt  httpSetupInstruction.txt  main.c  users.json  usersPopulation.txt
api/: base64.h  httpServer.h  idGenerator.h  main.c
api/base64/: b64.h  base64.h  base64Decode.h  base64Encode.h
api/controllers/: examController.h  groupsController.h  helloController.h  loginController.h  usersController.h
api/http/: http.h  httpDispatcher.h  httpResposeStatus.h  httpServer.h
api/repositories/: examRepository.h  groupsRepository.h  mongoRepositories.h  userRepository.h
endpoints/: createGroup.txt  createTest.txt  editGroup.txt  getGroups.txt  getStudents.txt  login.txt
ui/: package.json
ui/src/: App.js  AppRouter.js  app.css  config.js  store.js
ui/src/actions/: actions.js
ui/src/components/: Header.js  Page.js  Page.module.css  PageWithRouting.js  PageWithRouting.module.css
ui/src/components/pages/: CompleteExamPage.js  CompleteExamPage.module..css  CompleteExamPage.module.css  CreateExamPage.js  CreateExamPage.module.css  ExamsPage.js  ExamsPage.module.css  GroupPage.js  GroupPage.module.css  GroupsPage.js  GroupsPage.module.css  HomePage.js  HomePage.module.css  LoginPage.js  LoginPage.module.css  StudentExamsPage.js
ui/src/epics/: authEpic.js  epics.js  examsEpic.js  groupsEpic.js  studentsEpic.js
ui/src/reducers/: authReducer.js  completedExamsReducer.js  examsReducer.js  groupsReducer.js  reducers.js  studentsReducer.js
ui/src/selectors/: authSelectors.js
(+2 files in other folders)
